# crm-analytics-service

./: .env.dev  .env.example  README.md  auth.py  db.py  docker-compose.airflow.yml  docker-compose.dev.yml  main.py  pyproject.toml  scheduler.py
dags/: deal_snapshot_dag.py  forecast_snapshot_dag.py
queries/: bd_dashboard.py  exec_dashboard.py  reports.py
routers/: dashboard.py  reports.py  team.py
scripts/: create_airflow_schema.py  dev_setup.sh  generate_token.py  seed_dates.py  seed_targets.py  test_airflow_jobs.py
tests/: test_cross_service.py  test_endpoints.py  test_schema_contract.py
