[project]
name = "sales-crm-analytics"
version = "1.1.0"
description = "OLAP / analytics service for Sales CRM — FastAPI + SQLAlchemy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "reportlab==4.2.5",
    "pendulum>=3.2.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
